--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 
 body {
-    --color1: #ffffff;
-    --color2: #ffffff;
-    --color3: #ffffff;
+    --color1: blue;
+    --color2: green;
+    --color3: purple;
     --color4: #ffffff;
     --color5: #ffffff;
 
