--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body {
     --color1: blue;
     --color2: green;
     --color3: purple;
-    --color4: #ffffff;
-    --color5: #ffffff;
+    --color4: #331616;
+    --color5: orange;
 
     /* https://coolors.co/generate and click export -> scss to get the colors to copy and paste below*/
     /* --color1: hsla(349, 69%, 76%, 1);
